adding group three notes

--- a/data/Characters.wiki
+++ b/data/Characters.wiki
@@ -37,6 +37,7 @@ Legendary Heroes:
     [Harris Flennre]
     [Elisha Vanesson]
     [Rimardo]
+    [Shirrong Bronzecore]
 
 [Augsburg]
     [Mayor Ubring]
