--- a/data/Quinn.wiki
+++ b/data/Quinn.wiki
@@ -7,4 +7,4 @@ Quinn's home barracks at [Marine HQ] is the west barracks
 -Gerald human M greatsword
 -Scill goliath M longsword + shield - DEAD
 -Lars half orc M shortsword + shield
--Kaylin human F archer (best friend) (longbow)
+-[Kaylin] human F archer (best friend) (longbow)
