adding references to books!

--- a/data/Books.wiki
+++ b/data/Books.wiki
@@ -4,15 +4,34 @@
 [Pantheon of the Dawn War]
 [The Resignation of Kord]
 [Foresake the Gods]
-[Roc Training Notebook]
 [To Kill a Mocking Kenku]
 [Way of the Woad]
 [Strength and Sacrifice]
-[Lexicon of the Hells]
 [Etherium, The Most Malleable Metal]
+[Field Guide to Fauna]
+[The Dialectic Subtleties]
+[Siege Engines in Practice]
+[Pinchwhistle's Treatise on Taxidermy]
+
+[Dun Morhen]
+  [Roc Training Notebook]
+
+[Gorda]
+  [Lexicon of the Hells]
+  [The Summoner's Grimoire]
 
 [Venril Sathir] Propoganda Books
     [Holy Tome of the Order of Steel]
     [The Holy City of Luthadel]
     [The Great Age of Peace] 
     [Kalas the City of Mist]
+    
+[Feywild]
+  [Otis]  
+    [Ancient Tales of Lord Corellon]
+    [Conflicts of the Neogi]
+    [Beasts of the Depths]
+    [Coloca Farming Techniques]
+    [Vegepygmy Cookbook]
+    [Materials of Legendary Craftsmen]
+    [The Endless Woods]
