--- a/data/Gorda.wiki
+++ b/data/Gorda.wiki
@@ -79,7 +79,7 @@ Areas of Interest:
         Looks like any other drunk's home, poorly furnished. The building has no windows other than the two by the front door. Home of the [Asmodeus] worshiping cult of [Ashmadai] Acts has a resting point sometimes for [House Salazar Assassins]
         Lead by [Favria]
         Through a trapdoor to the basement, is a crudely carved "Portal" used by the cult to hopefully some day open thier way to the hells.
-        Loot: [Lexicon of the Hells]
+        Loot: [Lexicon of the Hells], [The Summoner's Grimoire]
         EVIL GROUP NOTES
         By drawing the card for having a demon become his enemy, [Edan] has caused the Cultists here to have a successful ritual finally! Catching them by a bit of surprise. Ultimately resulting in a devil posessing the body of [Rhogar] of [House Salazar Assassins], enhancing his desire to kill [Edan], and also being more favorable toward the cultists for once.
         
