adding group three notes for entering the cave to the feywild

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1071,6 +1071,19 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
     -after bringing it to [Briar] who was unable to tame it, it was left out in the woods.
     
     -[Doot] plants the Major Illusion spellbook on [Thia Sianodell]'s table
+    -[Doot] rested high cleric namain's for the night
     
-        
+++++Session 46
+    - [Thia] trades a silver mirror for a glass orb arcane focus and some glass jars from [Robert Culliford]
+       - [Thia] then heads home to read her mysterious new spellbook (planted by [Doot])
+               
+    - [Doot] steals a silver spoon from High Cleric Namain's before leaving - a few doors down from the temple of the forgotten
+    - [Alas] goes to the middle of town and meets up with [Thia] and [Doot], who then as a group go to fetch [Briar]
+    - [Thia] does sending to [Plosive] to call her and [Quinn] to meet out by the forest edge
+      - the full group + [Quinn] head to the cave
+      -the stalagmite room was dealth with effectively by dispelling the darkness, only [Briar] got any damage
+      -the group ended after defeating the gelatinous cube in the cave, containing many woodland creatures and the corpse of [Daniel Milborne]
+      KILL COUNT SO FAR: 6 Darkmantles, 1 Gelatinous Cube
+    
+    
         
