adding feywild memories

--- a/data/Alas.wiki
+++ b/data/Alas.wiki
@@ -7,9 +7,11 @@ Autumn elf from the [Feywild]
 
 Encountered [Dockson] on one of his smuggling runs to [Augsburg] from [Luthadel] and chose to aid him in his efforts of helping the Skaa of [Luthadel]
 
-FORGOTTEN KNOWLEDGE
+++++FORGOTTEN KNOWLEDGE
 Love Interest from the [Feywild], [Libelle] who turned out to be a silver dragon
--will still be alive, but is an Ancient Silver Dragon, now residing at [Ko Foren]
+-will still be alive, but is an Ancient Silver Dragon (4100 years), now residing in the Wyvern Lair at [Ko Foren]
 
-Parents and Grandparents will all be dead.
-One Sibling will still be alive, [Abarat]
+Was whisked away during the great Neogi war when investigating the Black Obelisks on the outskirts of [Otis]
+-a beam of light shot down from the sky and everything around him dissapeared in a flash of holy light 
+
+Parents, sibling [Abarat] and Grandparents will all be dead
