--- a/data/Briar.wiki
+++ b/data/Briar.wiki
@@ -1,3 +1,12 @@
 ﻿++ Briar
 
 lands at [Fiore] with [Tuber]
+
++++FEYWILD MEMORIES
+Briar had a dugout home in the humble firbolg town of [Otis]
+
+Good friends with the vegepymies of [Eukar]
+ - was able to have the druids of Eukar open a portal that lead to the other world that was causing illness in theirs
+ - if revisited [Briar] will find that they can no longer perform the ritual because they are missing members of the Mahoganny family
+ 
+ 
