--- a/data/Eukar.wiki
+++ b/data/Eukar.wiki
@@ -10,6 +10,16 @@ have no leader, and work in harmony together
 
 ++++Places of interest
 
+Yellow Yam patch
+    -12 Vegepymies tend to the patch close to the eastern shore
+    -the yams are so massive they look like brown boulders at first
+    -there are 30 yams currently in the patch
+    -only 1 is close to being ripe, and has began to turn yellow
+    
+Coloca Grove
+    -the massive trees grown here don't have anyone tending to them for transportation purposes
+    -there are no reins for the leaves to be found in the grove    
+
 Mushroom Merchant - Vinir
     -2s per lb of Mushrooms imported from [Otis]
     
