--- a/data/Korro Kurro.wiki
+++ b/data/Korro Kurro.wiki
@@ -1,6 +1,6 @@
 ﻿++ Korro Kurro
 
-Korro Kurro is the Feywild side of Nota Huta, populated by the Korred (pg 168 of Volos)
+Korro Kurro is a [Feywild] side of [Nota Huta], populated by the Korred (pg 168 of Volos)
 
 Korro Kurro has a large stone hill in the center of it, visible from anywhere on the island, the Korred live upon and around it in stone huts. Galeb Duhr (pg 139) wander around the town to do various tasks for the Korred.
 
