--- a/data/Libelle.wiki
+++ b/data/Libelle.wiki
@@ -3,6 +3,14 @@
 Love interest of [Alas], 
 
 used to be found in the [Feywild] with the appearance of an elf in [Tajuru]
-but since [Alas] left hundreds of years ago, she became bitter, lonely, and took residence in the wyvern cave of [Ko Foren]
+but since [Alas] left thousands of years ago, she became bitter, lonely, and took residence in the wyvern cave of [Ko Foren]
 
-Will be elderly and bitter that [Alas] LEFT her during the war when found (1200 years old in dragon years)
+Will be elderly and bitter that [Alas] LEFT her during the war when found (4100 years old in dragon years)
+
+
+[Alas] weenie:
+"WHERE HAVE YOU BEEN FOR THE LAST 4 THOUSAND YEARS?"
+"YOU LEFT ME IN THE MIDDLE OF THE WAR"
+"YOU DIDN'T EVEN SAY WHERE YOU WERE GOING"
+"I THOUGHT YOU WERE DEAD"
+
