--- a/data/Thia Sianodell.wiki
+++ b/data/Thia Sianodell.wiki
@@ -3,3 +3,11 @@
 Moon Elf follower of [Sehanine]
 
 ate the Reflection [AkumaFruits]
+
+++++FEYWILD MEMORIES
+Thia lived in an era of the [Feywild] that has been long forgotten to any current inhabitant
+
+She had worship in a moon temple of [Sehanine] before [Tajuru] was even established as a small town, at this time the village was known as Elfehone.
+
+She and her sisters one fateful night got an omen in their scrying pool, when it glowed a strong but yet soft blue, Thia went to bathe in the waters, which turned out to no longer be a shallow pool, but that night had turned into a portal that lead to  [Nowa Huta]
+
