--- a/data/Cave to Feywild.wiki
+++ b/data/Cave to Feywild.wiki
@@ -29,7 +29,7 @@ Entry is on [Nowa Huta] through a small opening toward the back of a Brown Bear 
     -They feed on the "fish" in the other pool
     -They make living vine nests for their beds
     -Can offer the party to bathe in thier slimey vine-water pool before they go into the Aboleth pool
-     (Potion of Resistance-Acid, Advantage against Disease)
+     (Potion of Resistance-Acid, Advantage against Disease, breath underwater)
         -they use it whenever they need to go over there, made from the vines.
         -24 hours
         
