adding group three notes

--- a/data/Alas.wiki
+++ b/data/Alas.wiki
@@ -7,6 +7,8 @@ Autumn elf from the [Feywild]
 
 Encountered [Dockson] on one of his smuggling runs to [Augsburg] from [Luthadel] and chose to aid him in his efforts of helping the Skaa of [Luthadel]
 
+[Alas] ate the god creator [AkumaFruits]
+
 ++++FORGOTTEN KNOWLEDGE
 Love Interest from the [Feywild], [Libelle] who turned out to be a silver dragon
 -will still be alive, but is an Ancient Silver Dragon (4100 years), now residing in the Wyvern Lair at [Ko Foren]
