--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1166,6 +1166,7 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
     [Quinn] suggests to [Doot] that the two of them should steal some gold
       -steal sucessfully 12k gold from the temple of the forgotten
       -[Doot] breaks off his right leg trying to remove swollowed gold from his stomach (nat 1)
+        -he is able to re-attach it, though, not perfectly aligned
       
     NEXT DAY  
     
