--- a/data/Taipan.wiki
+++ b/data/Taipan.wiki
@@ -21,4 +21,8 @@ Taipan Glassworks - Shijam M
 Monestary of the Snake
     Many monks sit in the sand zen gardens meditating. Gathering strength from the land.
     
-    
+[Fochlucan Bard College]
+    the bards play nearly 24/7, thus use the following background music for Taipan:
+    https://www.youtube.com/watch?v=nN-542IYoE0   
+    they serve the city in this way to keep the gargantuan purple worms of the desert docile and away from town.
+    -despite having a bard college, they do not participate in [Bol'Shoy]
