adding group three notes

--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -1176,3 +1176,11 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
       
     The group traverses back in into the cave and goes into the Aboleth's pool
     BATTLE ENSUES ON THE NEXT EPISODE
+    
+        
+++++Session 51
+    The group defeats the Aboleth
+    The group defeats the three golems that guard the portal to the feywild
+    the group then retreat to [Thia Sianodell]'s house to rest 
+       -Thia identifies the three Ioun Stones
+       -long rest at Thia's house
