adding group three notes

--- a/data/AkumaFruits.wiki
+++ b/data/AkumaFruits.wiki
@@ -33,7 +33,7 @@ Characters who die by drowning when under the effect of an Akuma Fruit will go t
 12. Crystal element - [Doot]
 13. Shadow element 
 14. Etherium element [Venril Sathir]
-15. Ethereal (exists in material and Ethereal plane simultaneously)
+15. Ethereal (exists in material and Ethereal plane simultaneously) [Briar]
 16. Alternate Reality Attunement [Callistege] 
 
 ++ZOAN
