--- a/data/Group Three Notes.wiki
+++ b/data/Group Three Notes.wiki
@@ -19,8 +19,8 @@ XXXXXXX  XXXXXXX
 
 XXXXXXX  XXXXXXX
 XXXXX(August 7th)XX XXXXXXX
-XXXXXXX  XXXXXX
-XXXXXXX
+XXXXXXX  XXXXXXX
+XXXXXXX  XXX 
 
 [Alas] sends a crate to [Dockson] at [Luthadel] taking 7 days to arrive XXXXXX
 
@@ -1184,3 +1184,47 @@ Vin tracks down [Letho] and ask him to join for the attack on [Arabasta]
     the group then retreat to [Thia Sianodell]'s house to rest 
        -Thia identifies the three Ioun Stones
        -long rest at Thia's house
+       
+++++Session 52
+    Thia teaches Alas some religion over the night
+      - Alas then practices on his own 
+    Doot practices caligraphy
+      - becoming proficient
+    Briar practices wood carving
+    
+    Briar goes to the carpenters around 9am to work on chairs for the wizard school
+    
+    Thia gets a permenant +1 to her daily diviation rolls
+    
+    [Alas] listens to High Cleric Namaine about religion to gain a tick
+    
+    Thia communes with Sehanine about leaving the island, and it sounds like she should
+      - Thia convinces Quinn to stay with the group
+      
+    NEXT DAY
+      
+    - Thia gives her old orb arcane focus to her friends at the Temple of Sehanine in [Nowa Huta] to remember her by
+    
+    The group then travels to the boat to leave according to Thia's Commune with Sehanine and Briar's sickly friend
+      
+    [Briar] consumes the fruit she's held onto for a long time while on the shore
+      - obtains the Ethereal Fruit power
+        
+    With everyone on the boat, the group travels back the way they came (north - east)
+        - leaving a rowboat behind on the shore
+        - the group then travels south-east to [Gorda] as originally planned (2 days) XX
+        
+    ON GORDA
+      -[Doot] [Alas] and [Plosive] jump off the ship onto the dock striking poses, but Doot crashes through the dock being really heavy.
+        -As the group pulls doot from the water, they sell him as a statue to a drunk for 15 silver who goes off to find a cart  
+        
+      -Plosive buys some books from [Leeran]'s:
+         - Untitled: The Works of Jever Blackgear (20g)
+         - Secrets of A Repentant Thief (20g)
+         - The Magic of the Flames (25g)
+         - A History of Humanoid Fashion (15g)
+         - Eyes of Newts (30g)
+         
+      -[Alas] wants to buy the pink diamond and haggles him down to investigate if the diamond is actually a rose quarts   
+         
+           
