--- a/data/Leeran.wiki
+++ b/data/Leeran.wiki
@@ -7,7 +7,7 @@ Leeran, who only ever appears at the shops in [Gorda] and [Luthadel] as an illus
 Illusionist (from volos)
 
 Items for Sale:
-        -god fruit - 6000g each (2 in stock in respective sized decorative metal boxes)
+        -SOLD god fruit - 6000g each (2 in stock in respective sized decorative metal boxes)
         -potions - weak 20g each 2d4+2
             -normal 40g each 4d4+4
             -strong 80g each 8d4+8
